--- a/gb/24/6/12/n14269010.md
+++ b/gb/24/6/12/n14269010.md
@@ -6,7 +6,7 @@
 <h6>立法院交通委员会12日考察台南地区交通建设。（交通部提供）
 </h6>
 <hr>
-<p>【大纪元2024年06月12日讯】（大纪元记者庄瑷筠台湾台南报导）立法院交通委员会12日考察台南地区交通建设，交通部长李孟谚表示，台南市铁路地下化预定2026年底完工，台南捷运未来进度也将更快。</p>
+<p>【大纪元2024年06月12日讯】（大纪元记者庄瑷筠台湾台北报导）立法院交通委员会12日考察台南地区交通建设，交通部长李孟谚表示，台南市铁路地下化预定2026年底完工，台南捷运未来进度也将更快。</p>
 <p>民进党立委林俊宪指出，南科已成为台湾产值最高科学园区，台南却是六都轨道建设起步最晚的城市，目前台南市铁路地下化工程进度已达86.2%，随着市区扩张，计划北端的永康区、新化区已融入市区，且因南科车潮造成平交道严重堵塞，实有延伸必要。</p>
 <p>李孟谚表示，台南市铁路地下化预定2026年底完工，至于永康地下化延伸案已来回讨论数次，只要完备相关计划，交通部一定全力支持核定。</p>
 <p>台南市交通局长王铭德说明，永康铁路延伸案可行性研究报告，自2019年起迄今共计8次函报交通部审查，不过因涉及后续台铁公司经营考量，今年4月修正排除善化车站改善扩建工程及调整总经费后，目前已送交通部审查。</p>
@@ -15,40 +15,41 @@
 <p>李孟谚表示，今年是台南建城400年，便捷的交通建设有助于都市缝合、改善市容，更能带动经济发展，台南铁路地下化延伸永康是地方民众期待的铁路交通建设，交通部将积极协助台南市政府后续报院审议作业。</p>
 <p>责任编辑：陈真</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269007.md#1">台去年违规贩售药品逾千件 民众网售药品最常见</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268423.md#1">花莲强震重创运输产业 1632辆营业车免征1年汽燃费</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268404.md#1">新住民破60万 立委吁新住民基本法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268276.md#1">养生馆以看护名义聘越南移工 强迫卖淫牟利30万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267732.md#1">在台以人 入境澳门险遭送中</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267702.md#1">花莲定置渔业损失近4千万 农业部提高援助额度</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267562.md#1">北市夹娃娃机扰邻一年陈情53案 环保局：最高可罚3万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266097.md#1">台北捷运专员捡150万台币救命钱 归原主获表扬</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266071.md#1">空军士兵酒后泳渡基隆河失联59小时 下游1公里寻获遗体</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307412.md#1">助大陆人士变造台湾护照 北检起诉七人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307302.md#1">动团提全面禁止山猪吊 林业署：反而不利于保育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307141.md#1">勾结大陆人蛇集团伪造台湾护照 7人遭起诉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306640.md#1">NCC仅4委员 暂不处分涉及传播专业案件 7案将例外讨论</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303687.md#1">高中以上可报考 森林护管员11月甄试</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303654.md#1">性侵通缉犯竟可申请外籍看护 劳动部提修法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302847.md#1">im.B/吸金案 北院重判曾耀锋16年6月</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302849.md#1">诈团吸收移工当收簿手 至少34人受害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302247.md#1">保三警破史上最大非法电子烟厂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302250.md#1">全台扫荡 警逮创意私房、TG群组447嫌</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/9/n11709371.md#1" target="_blank">袁斌：汉学家林培瑞认清中共谎言的觉醒之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/9/12/n4526041.md#1" target="_blank">子华：谁是真正破坏社会安定的人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/3/n9919603.md#1" target="_blank">王江火：“抗美援朝”不具备正义性</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/8/n11098363.md#1" target="_blank">美国际宗教自由大使访港 促停止迫害法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265705.md#1">【未解之谜】阿南德最新预言：相同天象再现 人间将有异动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266607.md#1">端午节吃粽子起源不因纪念屈原？一起来揭谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262775.md#1">【未解之谜】他看到天机：“七星连芒”东方大城历劫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/26/n14167203.md#1">药学博士：自幼伴随我的鼻敏感和哮喘消失了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263161.md#1">【古道人生】媳妇煮蚯蚓给眼盲婆婆吃 即时招来天谴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267369.md#1">【未解之谜】揭秘1996年巴西UFO坠毁事件：活捉外星人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268456.md#1">【净园财经】中共地方政府缺钱 各种手段都用</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268679.md#1">【菁英论坛】朝鲜半岛 新冷战的柏林墙</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267626.md#1">中国吉林北山公园现凶案 4名外国人流血倒地</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267596.md#1">中共没收“特供酒”涉近9亿元 内幕引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267859.md#1">达美航空将推出高端经济舱服务 自9月开始</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267839.md#1">曾遭中共打压 台湾佳丽高曼容摘世界选美后冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267926.md#1">汤唯自曝最常用韩语 放闪导演丈夫一脸害羞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268574.md#1">胡歌睽违6年低调访台 活动资讯曝光引瞩目</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/9/n14267043.md#1">张书伟办婚宴迎娶谢京颖 坤达传授人夫生存之道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267501.md#1">涉《大象席地而坐》导演胡波之死 王小帅否认</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266367.md#1">南瓜遇见地瓜 创意素食甜点汤品太好吃了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265472.md#1">山林森呼吸 漫步林业遗迹桃园东眼山步道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/1/n13750290.md#1">注意五个吃粽小技巧 窈窕过端午</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266707.md#1">【名家专栏】经营自己花园好处多多</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267387.md#1">粽子这样吃补蛋白质又补钙 还有1款粽子能刮油脂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302520.md#1">【古道人生】康熙年间关帝显灵 大败贼寇的真实记载</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306767.md#1">【晚间新闻】大陆网民热议孟加拉政变 中共忙封号</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306935.md#1">【新闻欣视角】新冠病毒警报再响 两变异株来势汹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/12/n14269010.htm">台南铁路地下化预定2026年底完工 李孟谚：加速办理永康延伸案</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269010.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
